--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,22 @@
 spring.application.name=capstone
 
 ## JPA config
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database=h2
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database=mysql
 
 ## H2 config
-spring.datasource.url=jdbc:h2:tcp://localhost/~/capstone
-spring.datasource.username=sa
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/capstone
+#spring.datasource.username=sa
+#spring.datasource.driver-class-name=org.h2.Driver
+
+## MySQL config
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://101.235.73.77:3306/yido?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=yido
+spring.datasource.password=Sejongroot24!
 
 ## Video Upload config
 file.dir=/Users/lim/upload_storage/
