Video - MultibagFetchException 우회하여 해결, React응답데이터에 Id값 추가, VideoService.saveVideo 수행순서변경(videoPath없이 DB에 먼저 저장 <- 정상적인 방법이 아니라 추후 수정 必!!!)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,25 @@
 spring.application.name=capstone
 
 ## JPA config
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.database=mysql
+#1대다 관계에서 1측에 위치하는 여러 @OneToMany 필드값들을 한번에 가져올때 발생하는 오류 해결을 위한 설정
+#spring.jpa.properties.hibernate.default_batch_fetch_size=100
+#spring.jpa.properties.hibernate.jdbc.batch_size=100
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.database=mysql
 
 ## H2 config
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/capstone
-#spring.datasource.username=sa
-#spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:tcp://localhost/~/capstone
+spring.datasource.username=sa
+spring.datasource.driver-class-name=org.h2.Driver
 
 ## MySQL config
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://101.235.73.77:3306/yido?characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=yido
-spring.datasource.password=Sejongroot24!
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://101.235.73.77:3306/yido?characterEncoding=UTF-8&serverTimezone=UTC
+#spring.datasource.username=yido
+#spring.datasource.password=Sejongroot24!
 
 ## Video Upload config
 file.dir=/Users/lim/upload_storage/
