--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,16 @@ spring.application.name=capstone
 
 ## JPA config
 spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 #1대다 관계에서 1측에 위치하는 여러 @OneToMany 필드값들을 한번에 가져올때 발생하는 오류 해결을 위한 설정
 #spring.jpa.properties.hibernate.default_batch_fetch_size=100
 #spring.jpa.properties.hibernate.jdbc.batch_size=100
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.database=mysql
+
+## p6spy config
+decorator.datasource.p6spy.enable-logging=true
 
 ## H2 config
 spring.datasource.url=jdbc:h2:tcp://localhost/~/capstone
