--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,30 @@
 spring.application.name=capstone
 
 ## JPA config
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #1대다 관계에서 1측에 위치하는 여러 @OneToMany 필드값들을 한번에 가져올때 발생하는 오류 해결을 위한 설정
-#spring.jpa.properties.hibernate.default_batch_fetch_size=100
-#spring.jpa.properties.hibernate.jdbc.batch_size=100
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#spring.jpa.database=mysql
+spring.jpa.properties.hibernate.default_batch_fetch_size=100
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database=mysql
 
 ## p6spy config
 decorator.datasource.p6spy.enable-logging=true
 
 ## H2 config
-spring.datasource.url=jdbc:h2:tcp://localhost/~/capstone
-spring.datasource.username=sa
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/capstone
+#spring.datasource.username=sa
+#spring.datasource.driver-class-name=org.h2.Driver
 
 ## MySQL config
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://101.235.73.77:3306/yido?characterEncoding=UTF-8&serverTimezone=UTC
-#spring.datasource.username=yido
-#spring.datasource.password=Sejongroot24!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://101.235.73.77:3306/yido?characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=yido
+spring.datasource.password=Sejongroot24!
 
 ## Video Upload config
-file.dir=/Users/lim/upload_storage/
+file.dir=/Users/minu/Desktop/upload/video/
+#file.dir=/Users/lim/upload_storage/
 spring.servlet.multipart.max-file-size=1000MB
 spring.servlet.multipart.max-request-size=1000MB
